# ALMReady-03022026-FrontBack

./: .gitignore  OPTIMIZATION_PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
backend/: almready-backend.spec  requirements.txt  sidecar_main.py
backend/almready/: workers.py
backend/app/: config.py  filters.py  main.py  schemas.py  session.py  state.py
backend/engine/: __init__.py  workers.py
backend/scripts/: _analyze_producto.py  smoke_eve_unicaja.py  smoke_market_plot.py  smoke_market_view.py  smoke_nii_unicaja.py
docs/: FUTURE_CHANGES.md  FUTURE_SERVER_MODE.md  IMPLEMENTATION_PLAN_ENGINE_GAPS.md  PROJECT_AUDIT_AND_ROADMAP_2026-02-23.md  WHATIF_INTEGRATION_PLAN.md  ZIP_UPLOAD_PARSING_OPTIMIZATION_PLAN.md  analisis-tecnico-motor-calculo-2026-02-17.md  architecture_reporting.md  prompt-integracion-almready.md  variables-pendientes-mapping.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BalanceDetailsModal.tsx  BalancePositionsCard.tsx  BalanceUploader.tsx  CalculateButton.tsx  CurvesAndScenariosCard.tsx  InterestRateCurveUploader.tsx  InterestRateCurvesCard.tsx  ResultsCard.tsx  ResultsDisplay.tsx  ScenarioSelector.tsx  ScenariosCard.tsx
src/config/: balanceSchema.ts
src/hooks/: useBalanceFilters.ts  useSession.ts  useSmoothProgress.ts
src/lib/: api.ts  balanceUi.ts  calculationEngine.ts  calendarLabels.ts  csvParser.ts  formatters.ts  session.ts
(+163 files in other folders)
